--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-quill-new": "^3.6.0",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
