--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -47,6 +48,7 @@
     "next-themes": "^0.4.6",
     "quill.snow.css": "link:react-quill-new/dist/quill.snow.css",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
