--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-quill-new": "^3.6.0",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
