--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "react-toastify": "^11.0.5",
     "recharts": "2.15.4",
