--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "react-quill-new": "^3.6.0",
     "react-toastify": "^11.0.5",
     "recharts": "2.15.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "zod": "^4.1.12"
