--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "recharts": "2.15.4",
+    "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
